# DeliverFreshWhatsAppOrder

./: .gitignore  404.html  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  architecture.md  git_commands.sh  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  pypi.yml  python-ci.yml  testpypi.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/hi/: index.html
0.1/hi/hi/: index.html
0.1/hi/ja/: index.html
0.1/hi/ta/: index.html
0.1/ja/: index.html
0.1/ja/hi/: index.html
0.1/ja/ja/: index.html
0.1/ja/ta/: index.html
0.1/ta/: index.html
0.1/ta/hi/: index.html
0.1/ta/ja/: index.html
0.1/ta/ta/: index.html
0.2/: 404.html  index.html  sitemap.xml
0.2/hi/: index.html
0.2/hi/hi/: index.html
0.2/hi/ja/: index.html
0.2/hi/ta/: index.html
0.2/ja/: index.html
0.2/ja/hi/: index.html
0.2/ja/ja/: index.html
0.2/ja/ta/: index.html
0.2/ta/: index.html
0.2/ta/hi/: index.html
0.2/ta/ja/: index.html
0.2/ta/ta/: index.html
deliverfresh_whatsapp_order/: __init__.py  clean.py
deliverfresh_whatsapp_order.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: index.md
docs/hi/: index.md
docs/ja/: index.md
docs/ta/: index.md
hi/hi/: index.html
ja/: index.html
ja/ja/: index.html
site/: index.html
site/hi/: index.html
site/hi/ja/: index.html
site/hi/ta/: index.html
site/ja/hi/: index.html
site/ja/ta/: index.html
site/search/: search_index.json
site/ta/: index.html
site/ta/hi/: index.html
site/ta/ja/: index.html
ta/ta/: index.html
tests/: __init__.py  test_clean.py
