[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "deliverfresh-whatsapp-order"
version = "0.0.0"  # Placeholder; overridden by setuptools_scm from Git tag
description = "Clean WhatsApp chat exports into structured product lists"
authors = [{ name = "Raman Perumal", email = "your@email.com" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["whatsapp", "order", "cleaning", "text", "data"]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/rperumal3000/DeliverFreshWhatsAppOrder"
Documentation = "https://rperumal3000.github.io/DeliverFreshWhatsAppOrder"
Issues = "https://github.com/rperumal3000/DeliverFreshWhatsAppOrder/issues"

[tool.setuptools_scm]
version_scheme = "strict-semver"
local_scheme = "no-local-version"